# NFLBettingDW

./: .gitignore  README.md  explore.ipynb  main.py  nflreadpy_wrapper.py  pyproject.toml  requirements.txt
DDL/unique/database/: NFLBettingDW.sql
DDL/unique/schemas/: nfl.sql  odds.sql
DDL/unique/tables/: nfl.franchises.sql  nfl.teams.sql  odds.game_props.sql  odds.individual_player_props.sql
DataModeling/: Dest_ConceptualModel.md  Dest_Relations_flowchart.md  Source_ConceptualModel.md  nfl_dest_conceptual.md  nfl_source_conceptual.md  odds_conceptual.md  relations_flowchart.md
utilities/: tank01_wrapper.py
